test/corpus/const_decl.txt
===
const decl
===

const X: int = 42;

---

(source_file
  (decl
    (decl_const
      (ident)
      (type
        (ty_custom
          (path
            (ident))))
      (expr
        (term
          (lit
            (number)))))))
