test/corpus/macro_decl.txt
===
macro decl
===

macro @foo($x) {
    var a: int;
    constraint a == $x;
}

---

(source_file
  (decl
    (decl_macro
      (macro_name)
      (macro_param
        (ident))
      (block
        (pred_body
          (decl_var
            (ident)
            (type
              (ty_custom
                (path
                  (ident))))))
        (pred_body
          (decl_constraint
            (expr
              (expr_cmp
                (expr
                  (term
                    (ident)))
                (expr
                  (term
                    (macro_param
                      (ident))))))))))))
