test/corpus/new_type_decl_2.txt
===
new type decl 2
===

type Foo = {
	bar: int,
	baz: int,
};

type Bar = Foo;

type Baz = int;

---

(source_file
  (decl
    (new_type_decl
      (ident)
      (type
        (tuple_type
          (tuple_type_field
            (ident)
            (type
              (custom_type
                (path
                  (ident)))))
          (tuple_type_field
            (ident)
            (type
              (custom_type
                (path
                  (ident)))))))))
  (decl
    (new_type_decl
      (ident)
      (type
        (custom_type
          (path
            (ident))))))
  (decl
    (new_type_decl
      (ident)
      (type
        (custom_type
          (path
            (ident)))))))
