test/corpus/storage_decl_2.txt
===
storage decl 2
===

storage {
  foo: int,
  bar: int,
}

---

(source_file
  (decl
    (storage_decl
      (storage_var
        (ident)
        (type
          (custom_type
            (path
              (ident)))))
      (storage_var
        (ident)
        (type
          (custom_type
            (path
              (ident))))))))
