test/corpus/storage_map.txt
===
storage map
===

storage {
	foo: (int => int),
	bar: (int => (int => int)),
}

---

(source_file
  (decl
    (decl_storage
      (storage_var
        (ident)
        (type
          (ty_map
            (type
              (ty_custom
                (path
                  (ident))))
            (type
              (ty_custom
                (path
                  (ident)))))))
      (storage_var
        (ident)
        (type
          (ty_map
            (type
              (ty_custom
                (path
                  (ident))))
            (type
              (ty_map
                (type
                  (ty_custom
                    (path
                      (ident))))
                (type
                  (ty_custom
                    (path
                      (ident))))))))))))
